@@ -32,15 +32,15 @@ public class IntegrationTest {
   @Inject
   @Extension
   private CompilationTestHelper _compilationTestHelper;
-  
+
   @Inject
   @Extension
   private ParseHelper<ModulesAST> _parseHelper;
-  
+
   @Inject
   @Extension
   private ValidationTestHelper _validationTestHelper;
-  
+
   @Test
   public void testParsing() {
     try {
@@ -75,7 +75,7 @@ public class IntegrationTest {
       throw Exceptions.sneakyThrow(_e);
     }
   }
-  
+
   @Test
   public void testValidation_01() {
     try {
@@ -92,7 +92,7 @@ public class IntegrationTest {
       throw Exceptions.sneakyThrow(_e);
     }
   }
-  
+
   @Test
   public void testValidation_02() {
     try {
@@ -109,7 +109,7 @@ public class IntegrationTest {
       throw Exceptions.sneakyThrow(_e);
     }
   }
-  
+
   @Test
   public void testCompileAndExecute() {
     try {
@@ -136,7 +136,7 @@ public class IntegrationTest {
       _builder.newLine();
       final IAcceptor<CompilationTestHelper.Result> _function = (CompilationTestHelper.Result it) -> {
         try {
-          Object _newInstance = it.getCompiledClass().newInstance();
+          Object _newInstance = it.getCompiledClass().getDeclaredConstructor().newInstance();
           final com.google.inject.Module module = ((com.google.inject.Module) _newInstance);
           final InjectionTarget obj = Guice.createInjector(module).<InjectionTarget>getInstance(InjectionTarget.class);
           Assert.assertEquals("one", IterableExtensions.head(obj.col));
